# Backend/src/modules/authstaff/authstaff.route.js
@@ -5,48 +5,56 @@ import { validateRequest } from "../../middlewares/validateRequest.js";
 import { registerStaffValidation } from "./validate/authstaff.validate.js";
 import { registerStaffcontroller, registerSuperAdminController } from "./authstaff.controller.js";
 import { loginStaffcontroller, updateStaffcontroller, getStaffcontroller, getStaffByIdcontroller } from "./authstaff.controller.js";
+import upload from "../../middlewares/multer.js";
 const router = Router();
 
 router.post("/registersuperadmin",
+    upload.single("profile_image"),
     /* 
         #swagger.tags = ['staff'] 
+        #swagger.consumes = ['multipart/form-data']
+        #swagger.parameters['username'] = { in: 'formData', required: true, type: 'string' }
+        #swagger.parameters['email'] = { in: 'formData', required: true, type: 'string' }
+        #swagger.parameters['password'] = { in: 'formData', required: true, type: 'string' }
+        #swagger.parameters['role_id'] = { in: 'formData', required: true, type: 'integer' }
+        #swagger.parameters['profile_image'] = { in: 'formData', type: 'file', required: true, description: 'Profile Image' }
     */
     registerSuperAdminController
 );
 
 router.post("/registerstaff",
+    authMiddleware, can("CREATE_STAFF"), upload.single("profile_image"), registerStaffValidation, validateRequest,
     /* 
         #swagger.tags = ['staff'] 
+        #swagger.consumes = ['multipart/form-data']
+        #swagger.parameters['username'] = { in: 'formData', required: true, type: 'string' }
+        #swagger.parameters['email'] = { in: 'formData', required: true, type: 'string' }
+        #swagger.parameters['password'] = { in: 'formData', required: true, type: 'string' }
+        #swagger.parameters['role_id'] = { in: 'formData', required: true, type: 'integer' }
+        #swagger.parameters['profile_image'] = { in: 'formData', type: 'file', required: true, description: 'Profile Image' }
     */
-    authMiddleware, can("CREATE_STAFF"), registerStaffValidation, validateRequest, registerStaffcontroller);
+    registerStaffcontroller);
 
 
 router.post("/loginstaff",
     /* 
         #swagger.tags = ['staff'] 
-    */ loginStaffcontroller);
+            
+     
+    */
+    loginStaffcontroller);
 
-router.put("/updatestaff/:id", authMiddleware,
+router.put("/updatestaff/:id", authMiddleware, can("UPDATE_STAFF"), upload.single("profile_image"),
     /* 
         #swagger.tags = ['staff'] 
-        #swagger.requestBody = {
-            required: true,
-            content: {
-                "application/json": {
-                    schema: {
-                        type: "object",
-                        properties: {
-                            username: { type: "string", example: "newusername" },
-                            email: { type: "string", example: "new@email.com" },
-                            password: { type: "string", example: "newpassword" },
-                            role_id: { type: "integer", example: 2 }
-                        }
-                    }
-                }
-            }
-        }
+        #swagger.consumes = ['multipart/form-data']
+        #swagger.parameters['username'] = { in: 'formData', type: 'string', example: "newusername" }
+        #swagger.parameters['email'] = { in: 'formData', type: 'string', example: "new@email.com" }
+        #swagger.parameters['password'] = { in: 'formData', type: 'string', example: "newpassword" }
+        #swagger.parameters['role_id'] = { in: 'formData', type: 'integer', example: 2 }
+        #swagger.parameters['profile_image'] = { in: 'formData', type: 'file', description: 'Profile Image' }
     */
-    can("UPDATE_STAFF"), updateStaffcontroller);
+    updateStaffcontroller);
 
 router.get("/getstaff", authMiddleware,
     /* 
